--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,6 @@
 ---
 bg: brown lighten-5
 headcolor: grey-text text-darken-3
-footcolor: grey-text text-darken-3
-footbgcolor: teal lighten-4
 ---
 
 <!DOCTYPE html>
@@ -35,7 +33,7 @@ footbgcolor: teal lighten-4
       </div>
     </div>
 
-    {% include footer.html color=layout.footcolor bgcolor=layout.footbgcolor %}
+    {% include footer.html %}
 
     {% include script.html %}
 
