--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-{% assign color = white-text %}
-{% assign bgcolor = grey darken-3 %}
+{% assign color = "white-text" %}
+{% assign bgcolor = "grey darken-3" %}
 
 <footer class="page-footer {{ bgcolor }} notranslate">
   <div class="container">
