add some cc license declaration

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,20 +7,12 @@
       <div class="col l6 s12">
         <h5 class="{{ color }}">{% t about.title %}</h5>
         <p class="{{ color }}">{% t site.description %}</p>
+        <p class="{{ color }}">{% t about.license %}</p>
         <div class='about-logos section'>
           <a href="//pdis.nat.gov.tw"> <img alt="logo" class="circle hoverable" src="{{ site.logo }}" style="width:56px;vertical-align:bottom;"> </a>
           <a class="white btn-floating btn-large waves-effect waves-circle cyan" href="//www.youtube.com/PdisTwGov" target="_blank"> <i class="red-text fa fa-3x fa-youtube-play"></i> </a>
           <a class="white btn-floating btn-large waves-effect waves-circle cyan" href="//github.com/pdis/web-jekyll" target="_blank"> <i class="black-text fa fa-3x fa-github"></i> </a>
           <a class="white btn-floating btn-large waves-effect waves-circle cyan" href="//twitter.com/TaiwanPDIS" target="_blank"> <i class="cyan-text fa fa-3x fa-twitter-square"></i> </a>
-        </div>
-        <div class="about-logos section">
-          <a href="https://twitter.com/TaiwanTodayJP" target="_blank"> <span class="flag-icon flag-icon-jp"></span> </a>
-          <a href="https://twitter.com/taiwanheute" target="_blank"> <span class="flag-icon flag-icon-de"></span> </a>
-          <a href="https://twitter.com/noticiastaiwan" target="_blank"> <span class="flag-icon flag-icon-es"></span> </a>
-          <a href="https://twitter.com/taiwanhoy" target="_blank"> <span class="flag-icon flag-icon-es"></span> </a>
-          <a href="https://twitter.com/taiwanreview1" target="_blank"> <span class="flag-icon flag-icon-gb"></span> </a>
-          <a href="https://twitter.com/trending_taiwan" target="_blank"> <span class="flag-icon flag-icon-us"></span> </a>
-          <a href="https://twitter.com/SiteTaiwanInfo" target="_blank"> <span class="flag-icon flag-icon-fr"></span> </a>
         </div>
       </div>
       <div class="col l3 s12">
