* put charset to copy

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,7 @@ headcolor: grey-text text-darken-3
 <html lang="{{ page.lang | default: site.lang | default: 'en' }}">
   
   <head>
+    <meta charset="UTF-8">
     <title>{% t page.title %}</title>
     <meta property="og:title" content="{% t page.title %}" />
     <meta name="author" content="PDIS" />
