--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -12,7 +12,7 @@ layout: default
       <header class="post-header">
         <h1 class="post-title" itemprop="name headline">{{ page.title | escape }}</h1>
         <p class="post-desc container">{{ page.excerpt | strip_html }}</p>
-        <div class="post-meta section">
+        <div class="post-meta section container">
           <i class="material-icons tiny">event</i>
           <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
             {{ page.date | date: "%Y-%m-%d" }}
