--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -25,9 +25,6 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: $font-sans;
 }
-h1, h2, h3 {
-  font-weight: 700;
-}
 span {
   font-family: $font-sans;
   line-height: 1.7;
@@ -77,10 +74,8 @@ img {
 /* post layout */
 
 .post-image {
-  margin: 1em 0 0 0;
+  margin: 1em auto 0 auto;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
   width: 100%;
   height: 50rem;
   @media screen and (max-width:$mobile-breakpoint){
@@ -91,7 +86,6 @@ img {
   text-align: center;
   h1.post-title {
     font-size: 2.8em;
-    font-weight: 800;
   }
   time {
     font-size: 0.9em;
@@ -103,7 +97,7 @@ img {
 .post-content {
   p, ol, ul, h1, h2, h3, h4, h5, h6, hr {
     max-width: $post-max-width;
-    margin: 1em auto .5em auto;
+    margin: 2rem auto 2rem auto;
   }
   li {
     font-family: $font-sans;
@@ -122,7 +116,7 @@ img {
     margin: 1em auto;
   }
   figure{
-    max-width: 768px;
+    max-width: $post-max-width;
     margin: 1em auto;
     img {
       width: 100%;
