--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,13 +11,13 @@ headcolor: grey-text text-darken-3
     <title>{% t page.title %}</title>
     <meta property="og:title" content="{% t page.title %}" />
     <meta name="author" content="PDIS" />
-    <meta property="og:locale" content="zh_TW" />
+    <meta property="og:locale" content="{{ page.lang | default: site.lang | default: 'en' }}" />
     <link rel="canonical" href="{{ page.url | absolute_url }}" />
     <meta property="og:url" content="{{ page.url | absolute_url }}" />
     <meta name="twitter:card" content="summary" />
     <meta property="twitter:title" content="{% t page.title %}" />
     <meta name="twitter:site" content="@TaiwanPDIS" />
-    <meta name="twitter:creator" content="@PDIS" />
+    <meta name="twitter:creator" content="@TaiwanPDIS" />
     <meta property="fb:admins" content="100014438376965" />
     <meta name="google-site-verification" content="uxXHtWt7-XyZrPJb9BznXlKOOKklt1D_TAIv1UW8VhM" />
     <script type="application/ld+json">{"headline":"{% t page.title %}","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/pdis-logo-final-inverse.png"},"name":"PDIS"},"url":"{{ page.url | absolute_url }}","author":{"@type":"Person","name":"PDIS"},"@type":"WebPage","@context":"https://schema.org"}</script>
