--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,6 @@
 <link rel="stylesheet" type="text/css" media="screen,projection" href="/assets/main.css">
 <link rel="stylesheet" type="text/css" media="screen,projection" href="/fonts/material-design-icons/material-icons.css">
 {% feed_meta %}
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
 <script src="https://use.fontawesome.com/e7b4292f28.js"></script>
 {% include google-analytics.html %}
