--- a/_includes/blogs.html
+++ b/_includes/blogs.html
@@ -73,7 +73,7 @@
 
 <script>
   function switchpage(e) {
-    let q = e.value
+    let q = encodeURIComponent(e.value)
     if (q > 1) {
       window.location.href = "{{ 'blog' | relative_url }}" + `/page${q}/`
     }
